highlight.js: self-host
in case there isn't internet access

--- a/index.adoc
+++ b/index.adoc
@@ -21,6 +21,7 @@ Abhinav Gupta
 :idprefix:
 :idseparator: -
 :source-highlighter: highlightjs
+:highlightjsdir: highlight
 :highlightjs-theme: css/highlight.css
 
 [.small.text-right]
