--- a/concept-scope.adoc
+++ b/concept-scope.adoc
@@ -119,7 +119,7 @@ dot at (0.3in, 0)
 line invis from last dot go 0.15in heading 135 "Logger" mono aligned ljust
 
 line from (last dot.x+0.4in, 0.1in) down 0.2in
-text "RequestHandler" mono ljust with .s at last.n
+text "RequestHandler" mono with .s at last.n
 
 dot at (A.e-0.3in, 0)
 line invis from last dot go 0.15in heading 135 "Request" mono aligned ljust
@@ -130,7 +130,7 @@ line invis from last dot go 0.15in heading 135 "Request" mono aligned ljust
 --
 *Parameter ordering*
 
-Sort function parameters by scope
+Sort by scope (big to small)
 
 [source,go]
 ----
