--- a/index.adoc
+++ b/index.adoc
@@ -14,6 +14,7 @@ Abhinav Gupta
 :revealjs_transition: none
 :revealjs_width: 1280
 :revealjs_height: 720
+// :revealjs_slideNumber: c/t
 :stylesdir: css
 :!iconfont-remote:
 :customcss: css/style.css
